Migrate Spring Batch Test to JUnit Jupiter