@@ -1,5 +1,5 @@
 /*
- * Copyright 2006-2007 the original author or authors.
+ * Copyright 2006-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,12 +15,11 @@
  */
 package org.springframework.batch.test;
 
-import static org.junit.Assert.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 
-import java.util.Arrays;
+import java.util.List;
 
-import org.junit.Test;
-import org.springframework.batch.core.JobExecution;
+import org.junit.jupiter.api.Test;
 import org.springframework.batch.core.JobParameters;
 import org.springframework.batch.core.converter.DefaultJobParametersConverter;
 import org.springframework.batch.support.PropertiesConverter;
@@ -29,118 +28,77 @@ import org.springframework.batch.support.PropertiesConverter;
  * @author Dave Syer
  *
  */
-public class MetaDataInstanceFactoryTests {
+class MetaDataInstanceFactoryTests {
 
-	private String jobName = "JOB";
+	private final String jobName = "JOB";
 
-	private Long instanceId = 321L;
+	private final Long instanceId = 321L;
 
-	private String jobParametersString = "foo=bar";
+	private final String jobParametersString = "foo=bar";
 
-	private JobParameters jobParameters = new DefaultJobParametersConverter()
+	private final JobParameters jobParameters = new DefaultJobParametersConverter()
 			.getJobParameters(PropertiesConverter.stringToProperties(jobParametersString));
 
-	private Long executionId = 4321L;
+	private final Long executionId = 4321L;
 
-	private String stepName = "step";
+	private final String stepName = "step";
 
-	private Long stepExecutionId = 11L;
+	private final Long stepExecutionId = 11L;
 
-	/**
-	 * Test method for {@link MetaDataInstanceFactory#createJobInstance(String, Long)} .
-	 */
 	@Test
-	public void testCreateJobInstanceStringLong() {
+	void testCreateJobInstanceStringLong() {
 		assertNotNull(MetaDataInstanceFactory.createJobInstance(jobName, instanceId));
 	}
 
-	/**
-	 * Test method for {@link MetaDataInstanceFactory#createJobInstance()} .
-	 */
 	@Test
-	public void testCreateJobInstance() {
+	void testCreateJobInstance() {
 		assertNotNull(MetaDataInstanceFactory.createJobInstance());
 	}
 
-	/**
-	 * Test method for {@link MetaDataInstanceFactory#createJobExecution()} .
-	 */
 	@Test
-	public void testCreateJobExecution() {
+	void testCreateJobExecution() {
 		assertNotNull(MetaDataInstanceFactory.createJobExecution());
 	}
 
-	/**
-	 * Test method for {@link MetaDataInstanceFactory#createJobExecution(Long)} .
-	 */
 	@Test
-	public void testCreateJobExecutionLong() {
+	void testCreateJobExecutionLong() {
 		assertNotNull(MetaDataInstanceFactory.createJobExecution(instanceId));
 	}
 
-	/**
-	 * Test method for
-	 * {@link MetaDataInstanceFactory#createJobExecution(String, Long, Long)} .
-	 */
 	@Test
-	public void testCreateJobExecutionStringLongLong() {
+	void testCreateJobExecutionStringLongLong() {
 		assertNotNull(MetaDataInstanceFactory.createJobExecution(jobName, instanceId, executionId));
 	}
 
-	/**
-	 * Test method for
-	 * {@link MetaDataInstanceFactory#createJobExecution(String, Long, Long, String)} .
-	 */
 	@Test
-	public void testCreateJobExecutionStringLongLongString() {
+	void testCreateJobExecutionStringLongLongString() {
 		assertNotNull(
 				MetaDataInstanceFactory.createJobExecution(jobName, instanceId, executionId, jobParametersString));
 	}
 
-	/**
-	 * Test method for
-	 * {@link MetaDataInstanceFactory#createJobExecution(String, Long, Long, JobParameters)}
-	 * .
-	 */
 	@Test
-	public void testCreateJobExecutionStringLongLongJobParameters() {
+	void testCreateJobExecutionStringLongLongJobParameters() {
 		assertNotNull(MetaDataInstanceFactory.createJobExecution(jobName, instanceId, executionId, jobParameters));
 	}
 
-	/**
-	 * Test method for {@link MetaDataInstanceFactory#createStepExecution()} .
-	 */
 	@Test
-	public void testCreateStepExecution() {
+	void testCreateStepExecution() {
 		assertNotNull(MetaDataInstanceFactory.createStepExecution());
 	}
 
-	/**
-	 * Test method for {@link MetaDataInstanceFactory#createStepExecution(String, Long)} .
-	 */
 	@Test
-	public void testCreateStepExecutionStringLong() {
+	void testCreateStepExecutionStringLong() {
 		assertNotNull(MetaDataInstanceFactory.createStepExecution(stepName, stepExecutionId));
 	}
 
-	/**
-	 * Test method for
-	 * {@link MetaDataInstanceFactory#createStepExecution(JobExecution, String, Long)} .
-	 */
 	@Test
-	public void testCreateStepExecutionJobExecutionStringLong() {
+	void testCreateStepExecutionJobExecutionStringLong() {
 		assertNotNull(MetaDataInstanceFactory.createStepExecution(stepName, stepExecutionId));
 	}
 
-	/**
-	 * Test method for
-	 * {@link MetaDataInstanceFactory#createJobExecutionWithStepExecutions(Long, java.util.Collection)}
-	 * .
-	 */
 	@Test
-	public void testCreateJobExecutionWithStepExecutions() {
-		assertNotNull(
-				MetaDataInstanceFactory.createJobExecutionWithStepExecutions(executionId, Arrays.asList(stepName)));
+	void testCreateJobExecutionWithStepExecutions() {
+		assertNotNull(MetaDataInstanceFactory.createJobExecutionWithStepExecutions(executionId, List.of(stepName)));
 	}
 
 }
